# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: test.yml
page_analyzer/: __init__.py  app.py  db.py  page_checker.py  seo_checker.py  validator.py
page_analyzer/templates/: base.html  error.html  main.html  show.html  show_all.html
page_analyzer/templates/errors/: 404.html  500.html
src/: __init__.py  db.py  page_analyzer.py
templates/: index.html  index_error.html  show.html  show_all.html
