[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple page analyze program for learning Flask and web dev"
authors = ["Igor Loskutov <omfi017@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
packages = [
    {include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
